@@ -32,6 +32,7 @@
 #define generic_types_h
 
 #include <sys/types.h>
+#include <stdbool.h>
 
 typedef union {
 	char            c;
